Fixed double scroll when menu open on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -26,6 +26,10 @@
 
 body {
   scroll-behavior: smooth;
+
+  &.menu-open {
+    @apply overflow-hidden sm:overflow-auto;
+  }
 }
 
 article {
